# kokoro.cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.json  main.cpp  token_map.cpp  token_map.hpp  tts_engine.cpp  tts_engine.hpp  uni.py  voice_loader.cpp  voice_loader.hpp  vtool.cpp  vtool.py  vtool.sh
